--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
             <p>Tel: +852 5464 7925</p>
             <p>Email: 22439765@life.hkbu.edu.hk</p>
             <div class="con_icons">
-                <a href="https://www.facebook.com/profile.php?id=100087653202951&mibextid=LQQJ4d" target="_blank"><img src="images/Facebook-2.png"></a>
+                <a href="https://www.facebook.com/profile.php?id=100087653202951&mibextid=LQQJ4d" target="_blank"><img src="images/facebook-2.png"></a>
                 <a href="https://weibo.com/u/7824948851" target="_blank"><img src="images/xinlangweibo2.png"></a>
                 <a href="https://www.xiaohongshu.com/user/profile/605b3ca0000000000101ef96?xhsshare=CopyLink&appuid=605b3ca0000000000101ef96&apptime=1677858936" target="_blank"><img src="images/xiaohongshu-2.png"></a>
             </div>
