--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
         </div>
 
         <div class="main">
-            <img src="images/pic 2.jpg">
+            <img src="images/pic 2.jpeg">
             <div class="about_text">
                 <h2>ABOUT <span class="sp3">ME</span></h2>
                 <h4>A graduate student of Hong Kong Baptist University</h4>
